force-app/main/default/objects/leaseworks__Deal__c/fields/leaseworks__Aircraft__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft__c</fullName>
    <description>All aircraft that are part of this campaign (system generated based on aircraft added in the Aircraft In Campaign section)</description>
    <inlineHelpText>All aircraft that are part of this campaign (system generated based on aircraft added in the Aircraft In Campaign section)</inlineHelpText>
    <label>Aircraft</label>
    <length>100</length>
    <type>Text</type>
</CustomField>