force-app/main/default/objects/leaseworks__Deal__c/fields/leaseworks__All_Proposals_Due_By_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__All_Proposals_Due_By_Date__c</fullName>
    <description>Date by which all proposals are due by</description>
    <inlineHelpText>Date by which all proposals are due from the various prospects. This can be set by the firm so marketing officers can ensure proposals are due.</inlineHelpText>
    <label>All Proposals Due By Date</label>
    <type>Date</type>
</CustomField>