force-app/main/default/objects/leaseworks__Deal__c/fields/leaseworks__Deal_Duration__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deal_Duration__c</fullName>
    <formula>leaseworks__Placement_By__c - leaseworks__Campaign_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>