force-app/main/default/objects/leaseworks__Deal__c/fields/leaseworks__Do_Not_Consider_Aircraft_Types__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Do_Not_Consider_Aircraft_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <description>03/14/2016 - Renaming to positive meaning - From Do not consider to Consider. And keeping default to not to consider aircraft types.</description>
    <inlineHelpText>LW has the ability to load prospects from third party sources such as Ascend, IBA etc. In cases where this functionality is enabled, the system can load prospects that fly the same type of aircraft and this can be further filtered down by Engine Type.</inlineHelpText>
    <label>Consider Fleet Database</label>
    <type>Checkbox</type>
</CustomField>