force-app/main/default/objects/leaseworks__Deal__c/fields/leaseworks__ExtRef__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ExtRef__c</fullName>
    <description>To be used for campaign auto-creation. External Id field is required to create parent and child (Campaign and Aircraft In Deal ) in one go.</description>
    <externalId>true</externalId>
    <label>_ExtRef</label>
    <length>50</length>
    <type>Text</type>
</CustomField>