force-app/main/default/objects/leaseworks__Deal__c/fields/leaseworks__Match_Aircraft_and_Engine_Types__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Match_Aircraft_and_Engine_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source:
When a Campaign is created, find operators matching not only the aircraft types of interest, but those who are interested in aircraft fitted with this specific type of engine.</description>
    <inlineHelpText>LW has the ability to load prospects from third party sources such as Ascend, IBA etc. In cases where this functionality is enabled, the system can load prospects that fly the same type of aircraft and this can be further filtered down by Engine Type.</inlineHelpText>
    <label>Filter Prospects By Engine Type?</label>
    <type>Checkbox</type>
</CustomField>