force-app/main/default/objects/leaseworks__Deal__c/fields/leaseworks__MSN_s_Marketed_In_This_Deal__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MSN_s_Marketed_In_This_Deal__c</fullName>
    <description>MSNs marketed in this deal, separated by a comma.</description>
    <inlineHelpText>List of MSNs marketed in this deal.</inlineHelpText>
    <label>_MSN (s) Marketed In This Deal</label>
    <type>TextArea</type>
</CustomField>