force-app/main/default/objects/leaseworks__Deal__c/fields/leaseworks__Number_Of_Category_1_Proposals__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Number_Of_Category_1_Proposals__c</fullName>
    <inlineHelpText>Based on the number of prospects tagged for this campaign as &quot;High&quot; priority, the system will calculate the total number</inlineHelpText>
    <label>Number Of Category High Prospects</label>
    <summaryFilterItems>
        <field>leaseworks__Deal_Proposal__c.leaseworks__Category__c</field>
        <operation>equals</operation>
        <value>1,High</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Deal_Proposal__c.leaseworks__Deal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>