force-app/main/default/objects/leaseworks__Deal__c/validationRules/leaseworks__Campaign_start_before_Due_and_Placement.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Campaign_start_before_Due_and_Placement</fullName>
    <active>true</active>
    <description>Due date and Placement by dates must be after Start date.</description>
    <errorConditionFormula>OR(
AND(
!ISBLANK(leaseworks__Campaign_Start_Date__c), !ISBLANK(leaseworks__All_Proposals_Due_By_Date__c), 
leaseworks__Campaign_Start_Date__c&gt;leaseworks__All_Proposals_Due_By_Date__c),
AND(
!ISBLANK(leaseworks__Campaign_Start_Date__c), !ISBLANK(leaseworks__Placement_By__c), 
leaseworks__Campaign_Start_Date__c&gt;leaseworks__Placement_By__c))</errorConditionFormula>
    <errorDisplayField>leaseworks__Campaign_Start_Date__c</errorDisplayField>
    <errorMessage>Campaign Start Date must be before All Proposals Due Date and Placement By.</errorMessage>
</ValidationRule>