force-app/main/default/objects/leaseworks__Deal__c/validationRules/leaseworks__CannotUncheckMatchIfAIDExists.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__CannotUncheckMatchIfAIDExists</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISBLANK(leaseworks__MSN_List__c),  PRIORVALUE( leaseworks__Match_Aircraft_and_Engine_Types__c ) !=  leaseworks__Match_Aircraft_and_Engine_Types__c )</errorConditionFormula>
    <errorDisplayField>leaseworks__Match_Aircraft_and_Engine_Types__c</errorDisplayField>
    <errorMessage>You cannot change Match Aircraft and Engine Types criteria after aircraft are added to the campaign.</errorMessage>
</ValidationRule>