force-app/main/default/objects/leaseworks__Deal__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Campaign_Active__c</columns>
    <columns>leaseworks__Campaign_Type__c</columns>
    <columns>leaseworks__MSN_List__c</columns>
    <columns>leaseworks__Campaign_Start_Date__c</columns>
    <columns>leaseworks__Current_Lessee__c</columns>
    <columns>leaseworks__Placement_By__c</columns>
    <columns>leaseworks__Number_Of_Proposals__c</columns>
    <columns>leaseworks__Number_Of_Category_1_Proposals__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>